# Ultra-PDF

./: package-lock.json  package.json
backend/: .dockerignore  .gitignore  Dockerfile  FONTS_SETUP.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: endpoints.py
backend/app/middleware/: rate_limit.py  security.py
backend/app/services/: image_service.py  pdf_service.py
backend/app/utils/: security.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/compress/: page.tsx
frontend/src/app/docx-to-pdf/: page.tsx
frontend/src/app/image-to-pdf/: page.tsx
frontend/src/components/: DownloadSection.tsx  FileList.tsx  FilePreviewGrid.tsx  FileUploadZone.tsx  Footer.tsx  ImageEditor.tsx  Navbar.tsx  PagePreviewGrid.tsx  PageThumbnail.tsx  PdfPreviewModal.tsx  PdfThumbnail.tsx  ProgressBar.tsx  RangePreview.tsx  SignatureCanvas.tsx  SignaturePreview.tsx  SortableFileItem.tsx  SortablePageItem.tsx  TextToolbar.tsx  ThemeProvider.tsx
frontend/src/hooks/: useCompressWorker.ts  useConvertWorker.ts  usePdfSplitWorker.ts  usePdfWorker.ts  useRemoveBgWorker.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  indexedDB.ts  pdfjs.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/workers/: pdf.worker.ts
src/components/: FileList.tsx  FileUploadZone.tsx  ProgressBar.tsx  SortableFileItem.tsx
src/hooks/: usePdfWorker.ts
src/types/: index.ts
src/utils/: indexedDB.ts
(+13 files in other folders)
